# PrimeFusion_Enhanced

./: .gitignore  CMakeLists.txt
analysis/: capacity_model.py
benchmarks/cbor/: CMakeLists.txt
benchmarks/cbor/src/: cbor_benchmark.cpp  cbor_benchmark_attitude.cpp  cbor_benchmark_battery.cpp  cbor_benchmark_global_position.cpp  cbor_benchmark_gps_block.cpp  cbor_benchmark_odometry.cpp  cbor_benchmark_status.cpp  test_api.cpp
benchmarks/cbor/tests/: test_integrity.cpp
benchmarks/common/: CMakeLists.txt
benchmarks/common/include/: IBenchmark.h  IMetric.h  mavlink_types.h
benchmarks/json/: CMakeLists.txt
benchmarks/json/src/: json_benchmark.cpp  json_benchmark_attitude.cpp  json_benchmark_battery.cpp  json_benchmark_global_position.cpp  json_benchmark_gps_block.cpp  json_benchmark_odometry.cpp  json_benchmark_status.cpp
benchmarks/json/tests/: test_integrity.cpp
benchmarks/msgpack/: CMakeLists.txt
benchmarks/msgpack/src/: msgpack_benchmark.cpp  msgpack_benchmark_attitude.cpp  msgpack_benchmark_battery.cpp  msgpack_benchmark_global_position.cpp  msgpack_benchmark_gps_block.cpp  msgpack_benchmark_odometry.cpp  msgpack_benchmark_status.cpp
benchmarks/msgpack/tests/: test_integrity.cpp
benchmarks/protobuf/: CMakeLists.txt
benchmarks/protobuf/src/: gps_beacon.proto  protobuf_benchmark.cpp  protobuf_benchmark_attitude.cpp  protobuf_benchmark_battery.cpp  protobuf_benchmark_global_position.cpp  protobuf_benchmark_gps_block.cpp  protobuf_benchmark_odometry.cpp  protobuf_benchmark_status.cpp
benchmarks/protobuf/tests/: test_integrity.cpp
docs/: DEV_KNOWLEDGE_BASE.md  IMPROVEMENT_STRATEGY.md  MAVLINK_PAYLOAD_SPECS.md  REFACTOR_PLAN_HIGH_HAZARD.md  remote_execution_plan.md
harness/: runner.py
harness/cpp/: CMakeLists.txt
harness/cpp/src/: runner_attitude.cpp  runner_battery.cpp  runner_global_position.cpp  runner_gps_block.cpp  runner_gps_raw.cpp  runner_main.cpp  runner_memory.cpp  runner_odometry.cpp  runner_status.cpp  runner_template.hpp  runner_time.cpp
tools/: deploy_to_pi.sh  install_dependencies.sh
